--- a/cardapio/index.html
+++ b/cardapio/index.html
@@ -1,29 +1,44 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cardápio</title>
+    <title>Zanon's Pizza - Cardápio </title>
     <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
-  <h1>Cardápio</h1>  
-  <ol>
-    <li>Calabresa
-        <p>Ovos, cebola, azeitona, ervilha, queijo e presunto dão sabor a segunda pizza mais queridinha dos brasileiros.</p>
-    </li>
-    <li>Portuguesa 
-        <p>Sabor ícone da Itália que leva apenas molho, muçarela, tomate e manjericão. É uma ótima opção para quem não come carne.</p></li>    
-    <li>Frango com catupiry 
-        <p>A mistura de proteína e cremosidade que deu muito certo.</p>
-    </li>
-    <li>Muçarela 
-        <p>Simples e perfeita como tem que ser. A número 1 entre os paulistanos.</p>
-    </li>
-    <li>Napolitana 
-        <p>Um sabor genuinamente italiano que não pode faltar na sua pizzaria.</p>
-    </li>
-  </ol>
+    <div class="container">
+
+        <img src="./img/pizza.jpg" alt="Pizza Grande">
+        <div class="cardapio">
+            <h1>Cardápio</h1>
+            <ol class="cardapio-lista">
+                <li class="cardapio-sabores">Calabresa
+                    <span>R$ 53,99 - 16 fatias</span>
+                    <p>Ovos, cebola, azeitona, ervilha, queijo e presunto dão sabor a segunda pizza mais queridinha dos brasileiros.</p>
+                </li>
+                <li class="cardapio-sabores">Portuguesa
+                    <span>R$ 52,99 - 16 fatias</span>
+                    <p>Sabor ícone da Itália que leva apenas molho, muçarela, tomate e manjericão. É uma ótima opção para quem não come carne.</p>
+                </li>
+                <li class="cardapio-sabores">Frango com catupiry
+                    <span>R$ 54,99 - 16 fatias</span>
+                    <p>A mistura de proteína e cremosidade que deu muito certo.</p>
+                </li>
+                <li class="cardapio-sabores">Muçarela
+                    <span>R$ 49,99 - 16 fatias</span>
+                    <p>Simples e perfeita como tem que ser. A número 1 entre os paulistanos.</p>
+                </li>
+                <li class="cardapio-sabores">Napolitana
+                    <span>R$ 51,99 - 16 fatias</span>
+                    <p>Um sabor genuinamente italiano que não pode faltar na sua pizzaria.</p>
+                </li>
+            </ol>
+        </div>
+    </div>
 </body>
+
 </html>
